--- a/Session_1/1_getting_started_with_Jupyter_Notebooks.ipynb
+++ b/Session_1/1_getting_started_with_Jupyter_Notebooks.ipynb
@@ -30,20 +30,11 @@
     "* [Including youtube videos](#Including-youtube-videos)\n",
     "\n",
     "\n",
-    "* [Python's help system](#Python's-help-system)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "----"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "* [Python's help system](#Python's-help-system)\n",
+    "\n",
+    "\n",
+    "----\n",
+    "\n",
     "## Goal"
    ]
   },
@@ -374,9 +365,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"400\"\n",
+       "            height=\"300\"\n",
+       "            src=\"https://www.youtube.com/embed/7eQYZGf9--0\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.YouTubeVideo at 0x316540d0>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.display import YouTubeVideo\n",
     "YouTubeVideo('7eQYZGf9--0')"
@@ -413,7 +426,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
