--- a/Session_1/2_getting_started_with_IPython.ipynb
+++ b/Session_1/2_getting_started_with_IPython.ipynb
@@ -4,20 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Getting started with IPython"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Contents"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Getting started with IPython\n",
+    "\n",
+    "----\n",
+    "\n",
     "* [Goal](#Goal)\n",
     "\n",
     "\n",
@@ -36,44 +26,19 @@
     "* [The IPython magic commands](#The-IPython-magic-commands)\n",
     "\n",
     "\n",
-    "* [Software introspection with IPython](#Software-introspection-with-IPython)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "----"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Goal"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "* [Software introspection with IPython](#Software-introspection-with-IPython)\n",
+    "\n",
+    "\n",
+    "----\n",
+    "\n",
+    "## Goal\n",
+    "\n",
     "The aim of this notebook is to become familier with some of the most important capabilities of the IPython (Interactieve Python) REPL.  \n",
     "Note that term `REPL` is synonymous with `shell`:\n",
     "\n",
     ">A read–eval–print loop (REPL), also known as an interactive toplevel or language shell, is a simple, interactive computer programming environment that takes single user inputs (i.e. single expressions), evaluates them, and returns the result to the user.\n",
     "\n",
     "[wikipedia](https://en.wikipedia.org/wiki/Read–eval–print_loop)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "----\n",
-    "\n",
-    "[Contents](#Contents)\n",
-    "\n",
-    "----"
    ]
   },
   {
@@ -119,16 +84,6 @@
    "outputs": [],
    "source": [
     "!find -name \"*PYNQ*\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "----\n",
-    "[Contents](#Contents)\n",
-    "\n",
-    "----"
    ]
   },
   {
@@ -203,23 +158,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "----\n",
-    "\n",
-    "[Contents](#Contents)\n",
-    "\n",
-    "----"
    ]
   },
   {
@@ -278,23 +220,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%quickref"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "----\n",
-    "\n",
-    "[Contents](#Contents)\n",
-    "\n",
-    "----"
    ]
   },
   {
@@ -337,9 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%magic"
@@ -393,17 +320,6 @@
    "outputs": [],
    "source": [
     "%pdoc?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "----\n",
-    "\n",
-    "[Contents](#Contents)\n",
-    "\n",
-    "----"
    ]
   },
   {
@@ -475,9 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pattern?"
@@ -495,22 +409,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "floor?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "----\n",
-    "[Contents](#Contents)\n",
-    "\n",
-    "----"
    ]
   }
  ],
