--- a/Session_1/4_Programming_onboard_peripherals.ipynb
+++ b/Session_1/4_Programming_onboard_peripherals.ipynb
@@ -4,17 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Programming onboard peripherals\n",
-    "\n",
-    "----\n",
-    "\n",
-    "## Contents\n",
-    "\n",
-    "* [LEDs, switches and buttons](#LEDs, switches and buttons)\n",
-    "* [Controlling an LED](#Controlling an LED)\n",
-    "* [Example: Controlling all the LEDs, switches and buttons](#Example: Controlling all the LEDs, switches and buttons)\n",
-    "\n",
-    "----"
+    "# Programming onboard peripherals"
    ]
   },
   {
@@ -22,7 +12,7 @@
    "metadata": {},
    "source": [
     "## LEDs, switches and buttons\n",
-    "The PYNQ-Z1 board has four green LEDs (LD0-3), 2 multi colour LEDs (LD4-5), 2 slide-switches (SW0-1) and 4 push-buttons (BTN0-3) that are connected to the Zynq’s programmable logic. \n"
+    "This notebook can be run with the PYNQ-Z1 or PYNQ-Z2. Both boards have four green LEDs (LD0-3), 2 multi colour LEDs (LD4-5), 2 slide-switches (SW0-1) and 4 push-buttons (BTN0-3) that are connected to the Zynq’s programmable logic."
    ]
   },
   {
@@ -55,9 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pynq.lib import LED, Switch, Button"
@@ -66,9 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "led0 = LED(0)"
@@ -77,9 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "led0.on()"
@@ -95,9 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "led0.off()"
@@ -116,7 +98,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#from pynq.board import LED, Switch, Button\n",
     "import time\n",
     "led0 = LED(0)\n",
     "for i in range(20):\n",
@@ -218,9 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
