--- a/Session_2/1_pmod_grove_tmp.ipynb
+++ b/Session_2/1_pmod_grove_tmp.ipynb
@@ -17,19 +17,17 @@
     "## Introduction\n",
     "\n",
     "\n",
-    "The PYNQ-Z1 has two peripheral interfaces, an Arduino interface, and two Pmod ports. A number of Pmod and Grove Peripherals are supported on the PYNQ-Z1.\n",
+    "The PYNQ-Z1 and PYNQ-Z2 boards have two Pmod ports and an Arduino interface. The PYNQ-Z2 also has a Raspberry Pi interface. A number of Pmod, Grove, and  Peripherals are supported by PYNQ. \n",
     "\n",
-    "Pmods can be plugged directly into the Pmod port. Grove Peripherals can be connected to the Pmod Port through a Pynq Grove Adapter board.\n",
+    "Pmods can be plugged directly into the Pmod port. Grove Peripherals can be connected to the Pmod Port or Arduino header through adapter boards.\n",
     "\n",
-    "As the Pmod interfaces, and Arduino interface are simply connected to FPGA pins, with all interface logic provided in an overlay, other peripherals can be connected with wires to the ports. (This assumes a custom overlay will be used.)\n",
+    "The external pins of these interfaces are connected to PL pins. This means the logic to control an external peripheral must be implemented in the PL in an Overlay. Pmods, Grove and Arduino peripherals can be used with IOPs in the *base* Overlay for the PYNQ-Z1 and PYNQ-Z2. \n",
     "\n",
-    "This notebook will show how to use the [Grove Temperature Sensor v1.2](http://www.seeedstudio.com/wiki/Grove_-_Temperature_Sensor_V1.2) on the Pynq-Z1 board. You will also see how to plot a graph using _matplotlib_, a Python package for 2D plots. The Grove Temperature sensor produces an analog signal, and requires an ADC. \n",
+    "This notebook will show how to use the [Grove Temperature Sensor v1.2](http://www.seeedstudio.com/wiki/Grove_-_Temperature_Sensor_V1.2) with the Grove ADC [Grove Temperature Sensor v1.2](http://wiki.seeedstudio.com/Grove-I2C_ADC/) on the PYNQ-Z1 or PYNQ-Z2 board. The Grove Temperature sensor produces an analog signal, and requires an ADC. You will also see how to plot a graph using _matplotlib_, a Python package for 2D plots. \n",
     "\n",
-    "A Grove Temperature sensor, a Grove ADC, and a Pynq Grove Adapter Adapter are required for this notebook example (a Pynq Shield could also be used instead of the Pynq Grove Adapter).\n",
+    "A Grove Temperature sensor, a Grove ADC, and a Pynq Grove Adapter Adapter are required for this notebook example (a Pynq Arduino adapter could also be used instead of the Pynq Grove Adapter).\n",
     "\n",
-    "The Grove ADC is an example of an I2C peripheral.\n",
-    "\n",
-    "The driver running on the IOP suports reading a single value of temperature, or reading and logging of multiple values at regular intervals."
+    "The driver for the Temperature sensor running on the IOP suports reading a single value of temperature, or reading and logging of multiple values at regular intervals."
    ]
   },
   {
@@ -45,9 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pynq.overlays.base import BaseOverlay\n",
@@ -67,15 +63,13 @@
     "### Create an instance of the sensor\n",
     "The sensor is connected to the ADC. You will create an instance of the temperature sensor. \n",
     "\n",
-    "The Grove ADC is connected to the board through the Pynq Grove adapter. This can be connected to either of the Pmod ports. The Grove ADC is an IIC peripheral. IIC requires pull-up pins on the FPGA. In the base overlay, these pins are only available on ports G3 or G4 of the Pynq Grove adapter, so the ADC must be connected to one of these ports. The Pmod port (PMODA, or PMODB), and the pins on the adapter are specified when the instance is created."
+    "The Grove ADC is connected to the board through the Pynq Grove adapter. This can be connected to either of the Pmod ports. The Grove ADC is an I2C peripheral. I2C requires pull-up pins on the FPGA. In the base overlay, these pins are only available on ports G3 or G4 of the Pynq Grove adapter, so the ADC must be connected to one of these ports. The Pmod port (PMODA, or PMODB), and the pins on the adapter are specified when the instance is created."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
@@ -98,9 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "temperature = tmp.read()\n",
@@ -127,9 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
@@ -154,9 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -168,15 +156,6 @@
     "plt.axis([0, len(tmp_log), min_tmp_log, max_tmp_log])\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
