--- a/Session_2/2_pmod_oled_example.ipynb
+++ b/Session_2/2_pmod_oled_example.ipynb
@@ -18,21 +18,19 @@
     "----\n",
     "\n",
     "## Introduction\n",
-    "This demonstration shows how to use the PmodOLED using the PYNQ-Z1 board.\n",
+    "This demonstration shows how to use the PmodOLED using the PYNQ-Z1 or PYNQ-Z2 board.\n",
     "\n",
     "----\n",
     "\n",
     "## Setup the board and PmodOLED, and load the overlay\n",
-    "### Connect the PmodOLED to the PYNQ-Z1 board.\n",
+    "### Connect the PmodOLED to the board.\n",
     "In this example the ***PmodOLED*** should be connected to ***PMODA.***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pynq.overlays.base import BaseOverlay\n",
@@ -41,12 +39,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pynq.lib.pmod import Pmod_OLED\n",
-    "#from pynq.lib.pmod import PMODA # Import constants\n",
     "# Connect to PMODA\n",
     "pmod_oled = Pmod_OLED(base.PMODA)"
    ]
@@ -62,14 +59,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "pmod_oled.clear()\n",
-    "pmod_oled.write('Welcome to the\\nPYNQ-Z1 board!')"
+    "pmod_oled.write('     Welcome\\n       to\\n      PYNQ!')"
    ]
   },
   {
@@ -83,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -102,10 +97,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pmod_oled.clear()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "System information can be captured and stored in Python variables, and written to the peripheral."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hostname = !hostname\n",
+    "ip_addr = !hostname -I\n",
+    "pmod_oled.write(hostname[0] + \"\\nIP:\" + ip_addr[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "pmod_oled.clear()"
@@ -131,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,10 +160,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "pmod_oled.draw_line(0,32,128,0)"
@@ -151,10 +169,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "pmod_oled.clear()\n",
@@ -170,10 +186,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "pmod_oled.clear()"
@@ -189,10 +203,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "pmod_oled.draw_rect(60,5,80,25)"
@@ -200,10 +212,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "pmod_oled.draw_rect(105,0,120,28)"
@@ -218,10 +228,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "pmod_oled.clear()"
@@ -241,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,9 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pmod_oled.clear()\n",
@@ -293,9 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pmod_oled.clear()\n",
