--- a/Session_2/3_pmod_grove_ledbar.ipynb
+++ b/Session_2/3_pmod_grove_ledbar.ipynb
@@ -15,13 +15,13 @@
     "----\n",
     "## Introduction\n",
     "\n",
-    "This examples shows how to use the Grove LED bar on the PYNQ-Z1 board.\n",
+    "This examples shows how to use the Grove LED bar on the PYNQ-Z1 or PYNQ-Z2 board.\n",
     "\n",
     "A [Grove LED Bar](http://www.seeedstudio.com/depot/Grove-LED-Bar-v20-p-2474.html) and Pynq Grove Adapter are required.\n",
     "\n",
     "The LED bar is an example of a peripheral driven by GPIO.\n",
     "\n",
-    "The LED bar is attached to the G1 connection on the Pynq Grove Adapter, which is connected to PMODB on the Pynq-Z1 board. \n",
+    "The LED bar is attached to the G1 connection on the Pynq Grove Adapter, which is connected to PMODB on the board. \n",
     "\n",
     "The LED bar has 10 LEDs. 8 Green LEDs, 1 Orange LED, and 1 Red LED. The brightness for each LED can be set independently. All functions supporting the LED bar are implemented in the C code running on the IOP driving the LED bar. \n",
     "\n",
@@ -32,9 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pynq.overlays.base import BaseOverlay\n",
@@ -53,9 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pynq.lib.pmod import Grove_LEDbar\n",
@@ -82,9 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#from pynq.pmods import pmod_const\n",
@@ -114,9 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Brightness 0-255\n",
@@ -151,9 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for i in range (1,11):\n",
@@ -203,15 +193,6 @@
     "        ledbar.reset()\n",
     "        done = True"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
