--- a/Session_3/1_wavedrom_tutorial.ipynb
+++ b/Session_3/1_wavedrom_tutorial.ipynb
@@ -23,9 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pynq.lib.logictools.waveform import draw_wavedrom"
@@ -159,13 +157,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# WaveDrom for real-time pattern generation and trace analysis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# WaveDrom for real-time pattern generation and trace analysis\n",
+    "\n",
     "### The __`logictools`__ overlay uses WaveJSON format to specify and generate real signals on the board.\n",
     "\n",
     "![](./images/logictools_block_diagram.png)"
@@ -195,7 +188,7 @@
    "metadata": {},
    "source": [
     "### Step 1: Download the `logictools` overlay and specify the pattern\n",
-    "The pattern to be generated is specified in the waveJSON format. The Waveform class is used to display the specified waveform."
+    "The pattern to be generated is specified in the WaveJSON format. The Waveform class is used to display the specified waveform."
    ]
   },
   {
@@ -308,9 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "state_list = ['S0', 'S1', 'S2', 'S3', 'S4', 'S5', 'S6', 'S7',\n",
