--- a/Session_3/2_boolean_generator.ipynb
+++ b/Session_3/2_boolean_generator.ipynb
@@ -18,9 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pynq.overlays.logictools import LogicToolsOverlay\n",
@@ -40,9 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "function = ['LD2 = PB3 ^ PB0']"
@@ -59,27 +55,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "boolean_generator = logictools_olay.boolean_generator\n",
     "boolean_generator.setup(function)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "__Find the On-board pushbuttons and LEDs__"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![](images/boolean_generator.png)"
    ]
   },
   {
@@ -92,9 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "boolean_generator.run()"
@@ -118,15 +96,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Test the function by pressing the pushbuttons. LED 2 (labelled LD2 on the board) should turn on when Push-button 0 or 3 (labelled BNT0 and BTN3 on the board) are presseed, but not both together. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Step 5: Stop the boolean generator"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "boolean_generator.stop()"
@@ -147,9 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pynq.overlays.logictools import LogicToolsOverlay\n",
@@ -174,9 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "boolean_generator.stop()"
