--- a/Session_3/4_fsm_generator.ipynb
+++ b/Session_3/4_fsm_generator.ipynb
@@ -19,9 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pynq.overlays.logictools import LogicToolsOverlay\n",
@@ -42,9 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fsm_spec = {'inputs': [('reset','D0'), ('direction','D1')],\n",
@@ -88,9 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fsm_generator = logictools_olay.fsm_generator"
@@ -101,7 +95,7 @@
    "metadata": {},
    "source": [
     "__Setup to use trace analyzer__   \n",
-    "In this notebook trace analyzer is used to check if the inputs and outputs of the FSM.\n",
+    "In this notebook, the trace analyzer is used to check if the inputs and outputs of the FSM.\n",
     "\n",
     "Users can choose whether to use the trace analyzer by calling the `trace()` method."
    ]
@@ -109,9 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fsm_generator.trace()"
@@ -128,9 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fsm_generator.setup(fsm_spec)"
@@ -234,9 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fsm_generator.stop()"
