--- a/Session_4/4_basic_xlnk_example.ipynb
+++ b/Session_4/4_basic_xlnk_example.ipynb
@@ -18,9 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from time import sleep\n",
@@ -52,7 +50,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -96,7 +93,7 @@
     "print(\"Before memory allocation:\")\n",
     "print_kb(xlnk)\n",
     "\n",
-    "buffer = xlnk.cma_array(shape=(1000,), dtype=np.float32)\n",
+    "buffer = xlnk.cma_array(shape=(10000000,), dtype=np.float32)\n",
     "\n",
     "print(\"After memory allocation:\")\n",
     "print_kb(xlnk)"
@@ -135,9 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from time import sleep\n",
-    "buffer.freebuffer()\n",
-    "sleep(1)\n",
+    "del buffer\n",
     "print(xlnk.cma_stats())"
    ]
   },
@@ -148,6 +143,13 @@
    "outputs": [],
    "source": [
     "print_kb(xlnk)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note, it is normal that the available memory may not be exactly the same as the previous number. "
    ]
   }
  ],
